# chatr

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  PROTOCOL.md  README.md  main.py
chatr-client/: Cargo.toml
chatr-server/: Cargo.toml
chatr-server/src/: client.rs  command.rs  lib.rs  main.rs  response.rs  server.rs
crates/server/: Cargo.toml
crates/server/src/: client.rs  command.rs  lib.rs  main.rs  response.rs  server.rs
crates/server/src/protocol/: command.rs  error.rs  mod.rs  request.rs  response.rs
