[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
oneshot = "0.1.11"
socket2 = "0.6.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.0"
clap = { version = "4.5", features = ["derive"] }
